--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -29,6 +29,7 @@
 
 .profile-nav {
   margin-top: $extra-large-margin + $double-margin;
+  padding-bottom: 3 * $extra-large-margin;
 }
 
 .profile-links {
